--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -1,19 +1,22 @@
 # main links links
 main:
+  - title: "Portfolio"
+    url: /portfolio/
+    
   - title: "Publications"
     url: /publications/
 
-  - title: "Talks"
-    url: /talks/    
+  - # title: "Talks"
+    # url: /talks/    
 
   - title: "Teaching"
     url: /teaching/    
-    
-  - title: "Portfolio"
-    url: /portfolio/
+
+  - title: "Experiences"
+    url: /experiences/
         
-  - title: "Blog Posts"
-    url: /year-archive/
+  - # title: "Blog Posts"
+    # url: /year-archive/
     
   - title: "CV"
     url: /cv/
